[package]
name = "ch_20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "make_cheapo_request"
path = "src/make_cheapo_request.rs"

[[bin]]
name = "poll_forever"
path = "src/poll_forever.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
