[package]
name = "ch_20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "make_cheapo_request"
path = "src/make_cheapo_request.rs"

[[bin]]
name = "make_cheapo_request_async"
path = "src/make_cheapo_request_async.rs"

[[bin]]
name = "poll_forever"
path = "src/poll_forever.rs"

[[bin]]
name = "many_requests"
path = "src/many_requests.rs"

[[bin]]
name = "many_requests_proper"
path = "src/many_requests_proper.rs"

[[bin]]
name = "chat_server"
path = "src/async-chat/src/bin/server/main.rs"

[[bin]]
name = "chat_client"
path = "src/async-chat/src/bin/client.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.21"
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_json = "1.0.82"
surf = "2.3.2"
tokio = { version = "1.20.1", features = ["sync"] }
