[package]
name = "tokio_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokio_chat_server"
path = "src/bin/server/main.rs"

[[bin]]
name = "tokio_chat_client"
path = "src/bin/client/main.rs"

[lib]
name = "tokio_chat_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "io-util", "io-std", "sync", "net", "macros"] }
tokio-stream = { version = "0.1.9", features = ["io-util"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
